packages/typ/tests/fixtures/diagnostics/0120_core_capsule_payload_mismatch_10.ml.expected
File "0120_core_capsule_payload_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0120_core_capsule_payload_mismatch_10 is not a valid module name.

File "0120_core_capsule_payload_mismatch_10.ml", line 2, characters 30-34:
2 | let _ : int capsule = Capsule true
                                  ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
